# linear_system_and_matrix

./: CMakeLists.txt  LinearSystem.cpp  LinearSystem.h  Matrix.cpp  Matrix.h  MatrixManager.cpp  MatrixManager.h  README.md  code snippets  main.cpp
gui/: ConfigureDialog.cpp  ConfigureDialog.h  CoreWidget.cpp  CoreWidget.h  IntfDataEntry.cpp  IntfDataEntry.h  IntfResultsDisplay.h  LinearSystemDataEntry.cpp  LinearSystemDataEntry.h  LinearSystemResultsDisplay.cpp  LinearSystemResultsDisplay.h  MainLayout.cpp  MainLayout.h  MainWindow.cpp  MainWindow.h  NothingToShow.cpp  NothingToShow.h
gui/include/: IntfDataEntry.h  IntfResultsDisplay.h  LinearSystemDataEntry.h  LinearSystemResultsDisplay.h  MainLayout.h  MainWindow.h
gui/saved_for_later/: AddressWidget.cpp  AddressWidget.h  NewAddressTab.cpp  TableModel.cpp
gui/src/: ConfigureDialog.cpp  LinearSystemDataEntry.cpp  LinearSystemResultsDisplay.cpp  MainLayout.cpp  MainWindow.cpp  NothingToShow.cpp  main.cpp
lib/libmatrix/src/: Matrix.cpp
libmatrix/src/: Matrix.cpp  MatrixManager.cpp
test/: TestLinearSystem.cpp  TestLinearSystem.h
